<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tw.com.chainsea.learndialog.MainActivity">

    <Button
        android:id="@+id/bt_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDialogClick"
        android:text="@string/alert_dialog" />

    <Button
        android:id="@+id/bt_pgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDialogClick"
        android:text="@string/pgs_dialog" />

    <Button
        android:id="@+id/bt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDialogClick"
        android:text="@string/dp_dialog" />

    <Button
        android:id="@+id/bt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDialogClick"
        android:text="@string/tp_dialog" />

    <Button
        android:id="@+id/bt_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDialogClick"
        android:text="@string/custom_dialog" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView" />

</LinearLayout>
